<resources>
    <string name="app_name">YourCard</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="complete_register">Complete Register</string>
    <string name="verfication_code">Verfication Code</string>
    <string name="field_required">Fiels Required</string>
    <string name="country_code">Country Code</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="enter_verfication_code">Enter Verfication Code</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="resend">Resend</string>
    <string name="signup">Signup</string>
    <string name="terms_and_conditions">Accept Terms of use</string>
    <string name="email">Email</string>
    <string name="notifications">Notifications</string>
    <string name="ryal">ryal</string>
    <string name="card_paly">Card paly</string>
    <string name="more">More</string>
    <string name="card_gifts">Card Gifts</string>
    <string name="total_price">Total Price</string>
    <string name="certify_your_card">Certify your card</string>
    <string name="discount">Discount</string>
    <string name="conduction">Conduction</string>
    <string name="automatic_conduction">Automatic Conduction</string>
    <string name="choose_card_type">Choose Card Type</string>
    <string name="descripsion">Descripsion</string>
    <string name="show_more">Show More</string>
    <string name="ranked_cards">Ranked cards</string>
    <string name="buy_now">Buy Now</string>
    <string name="my_orders">My Orders</string>
    <string name="waiting">Waiting</string>
    <string name="completed">Completed</string>
    <string name="bank_accounts">Bank Accounts</string>
    <string name="my_cards">My Cards</string>
    <string name="favourite">Favourites</string>
    <string name="recharge">Recharge</string>
    <string name="about_app">About App</string>
    <string name="logout">Logout</string>
    <string name="balance">Balance</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="banks">Banks</string>
    <string name="value">Value</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="cart">Cart</string>
    <string name="pay">Pay</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="copoun">Add Discount Copoun Here...</string>
    <string name="quantity">Quantity</string>
    <string name="confirm">Confirm</string>
    <string name="my_credit">My credit</string>
    <string name="my_favourites">My Favourites</string>
    <string name="bill">bill</string>
    <string name="pay_type">Pay Type</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="the_purpose_of_the_conversion">The purpose of the conversion</string>
    <string name="transfer_name">Transfer Name</string>
    <string name="send">Send</string>
    <string name="transfer_image">Transfer Image</string>
    <string name="type_message">Type Message</string>

</resources>