<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="backListener"
            type="com.yourcard.interfaces.Listeners.BackListener" />
        <variable
            name="lang"
            type="String" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_choose_order_type.ChooseOrderTypeActivity"
        android:background="@color/gray0"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/colorPrimary"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/white"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("en")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/white"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="16sp"
                    android:text="@string/bank_transfer"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:background="@color/third"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/the_purpose_of_the_conversion"

                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    app:contentPadding="15dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray11"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:text="@string/the_purpose_of_the_conversion"

                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/value"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"

                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    app:contentPadding="15dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/gray11"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:text="200 ryal"

                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/transfer_name"

                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    >
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_margin="5dp"
                        android:background="@color/white"
                        android:hint="@string/transfer_name"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/arrow"
                        app:layout_constraintStart_toEndOf="@id/tvCode"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/transfer_image"

                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    >
                    <FrameLayout
                        android:id="@+id/fl2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        >
                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            app:riv_border_width="0dp"
                            android:background="@color/white"
                            android:clickable="false"
                            android:layout_marginTop="8dp"
                            android:longClickable="false"
                            android:scaleType="fitXY"
                            />
                        <ImageView
                            android:id="@+id/icon"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_upload"
                            android:padding="5dp"
                            android:clickable="false"
                            android:longClickable="false"
                            android:tint="@color/gray11"

                            />
                    </FrameLayout>
                </androidx.cardview.widget.CardView>
                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/small_rounded_btn_primary"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/send"
                    />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
