<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="backListener"
            type="com.yourcard.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />


    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_constraintTop_toTopOf="parent"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_vertical"
                    android:onClick="@{()->backListener.back()}"
                    android:orientation="horizontal"

                    >

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation='@{lang.equals("en")?180:0}'
                        android:src="@drawable/ic_right_arrow"
                        android:tint="@color/white"

                        />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:clickable="false"
                        android:longClickable="false"
                        android:text="@string/cart"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/toolBar">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_right_arrow"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:text="@string/copoun"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lll"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@+id/ll"

                >

                <EditText
                    android:id="@+id/edtCopoun"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="5dp"

                    android:layout_weight="2.3"
                    android:background="@color/white"
                    android:clickable="true"
                    android:focusable="true"

                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    tools:ignore="RtlCompat" />

                <FrameLayout
                    android:id="@+id/flSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".7"
                    android:background='@{lang.equals("en")?@drawable/right_rounded:@drawable/left_rounded}'

                    >

                    <TextView
                        android:id="@+id/imgSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/confirm"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </FrameLayout>


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="9dp"
                app:layout_constraintBottom_toTopOf="@id/consTotal"
                app:layout_constraintTop_toBottomOf="@id/lll" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/consTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tvTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnCheckout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/small_rounded_btn_primary"
                    android:gravity="center"
                    android:text="@string/pay"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTotal" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/llEmptyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_shopping_cart"
                android:tint="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cart_empty"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />
        </LinearLayout>

    </FrameLayout>

</layout>
