<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"

        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="50dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp">

                        <ImageView
                            android:id="@+id/logo"
                            android:layout_width="180dp"
                            android:layout_height="150dp"

                            android:layout_marginTop="50dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"

                            />

                        <TextView
                            android:id="@+id/tvTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/enter_verfication_code"
                            android:textColor="@color/gray8"
                            android:textSize="18sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/logo" />

                        <EditText
                            android:id="@+id/edtCode"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="50dp"
                            android:background="@drawable/small_rounded_btn_white"
                            android:hint="@string/confirmation_code"
                            android:inputType="number"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray4"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvTitle"


                            />


                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="50dp"
                            app:cardBackgroundColor="@color/colorPrimary"
                            app:cardCornerRadius="25dp"
                            app:cardElevation="3dp"
                            app:layout_constraintBottom_toTopOf="@id/consTimer"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/edtCode"
                            app:layout_constraintVertical_bias="0">


                            <Button
                                android:id="@+id/btnConfirm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/transparent"
                                android:text="@string/confirm"
                                android:textColor="@color/white"
                                android:textSize="15sp"

                                />

                        </androidx.cardview.widget.CardView>


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/consTimer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="100dp"
                            app:layout_constraintBottom_toBottomOf="parent">


                            <TextView
                                android:id="@+id/tvResendCode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:enabled="false"
                                android:text="@string/resend"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="15sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tvTimer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="00:00"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />


                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </ScrollView>

    </FrameLayout>
</layout>
